--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <meta name="description" content="Portfolio Webpage of the front-end developer Fereshte Ghazi" -->
+    <meta
+      name="description"
+      content="Portfolio Webpage of Fereshte Ghazi, front-end developer"
+    />
+
     <title>Front-end developer - Fereshte Ghazi</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -71,15 +75,25 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-6"></div>
-        <a href="projects.html" class="col-md-6 big-col hoverable">Projects</a>
+        <a
+          href="projects.html"
+          title="Projects"
+          class="col-md-6 big-col hoverable"
+          >Projects</a
+        >
       </div>
       <div class="row">
         <div class="col-md-7"></div>
-        <a href="about.html" class="col-md-5 mid-col hoverable">about me</a>
+        <a href="about.html" title="About me" class="col-md-5 mid-col hoverable"
+          >about me</a
+        >
       </div>
       <div class="row">
         <div class="col-md-8"></div>
-        <a href="about.html#about_me" class="col-md-4 sml-col hoverable"
+        <a
+          href="about.html#about_me"
+          title="Contact information"
+          class="col-md-4 sml-col hoverable"
           >contact me</a
         >
       </div>
