--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Projects of Fereshte Ghazi, front-end developer"
+    />
 
     <title>Projects - Fereshte Ghazi</title>
     <link
@@ -65,13 +69,16 @@
         <div class="col-sm">
           <h1>Projects</h1>
           <h2 class="d-xs-block d-md-none">
-            <a href="index.html" class="h4 text-center">Back to Homepage</a>
+            <a href="index.html" title="Homepage" class="h4 text-center"
+              >Back to Homepage</a
+            >
           </h2>
         </div>
         <a
           href="index.html"
+          title="Homepage"
           class="col-md-3 sml-col float-end hoverable d-none d-md-block mt-5"
-          >HomePage</a
+          >Homepage</a
         >
       </div>
     </div>
@@ -82,13 +89,19 @@
           <div class="row">
             <a
               href="https://www.shecodes.io/workshops/shecodes-basics-ca6ab37f-1028-48df-9e94-87ae6104e031/projects/1289119"
+              title="Launch Tea webpage"
             >
-              <img src="tea.png" alt="" class="img-fluid hoverable mb-4 mt-5" />
+              <img
+                src="tea.png"
+                alt="Screenshot of Tea webpage"
+                class="img-fluid hoverable mb-4 mt-5"
+              />
             </a>
           </div>
           <div class="row">
             <a
               href="https://www.shecodes.io/workshops/shecodes-basics-ca6ab37f-1028-48df-9e94-87ae6104e031/projects/1289119"
+              title="Launch Tea webpage"
               class="col-md lnch-btn hoverable p-2"
               >Launch Tea webpage</a
             >
@@ -97,10 +110,13 @@
         <div class="col-md-1"></div>
         <div class="col-md-4">
           <div class="row">
-            <a href="https://legendary-klepon-f33e50.netlify.app/">
+            <a
+              href="https://legendary-klepon-f33e50.netlify.app/"
+              title="Launch weather forecast app"
+            >
               <img
                 src="weather.jpg"
-                alt=""
+                alt="screenshot of weather forecast application"
                 class="img-fluid hoverable mb-4 mt-5"
               />
             </a>
@@ -108,6 +124,7 @@
           <div class="row">
             <a
               href="https://legendary-klepon-f33e50.netlify.app/"
+              title="Launch weather forecast app"
               class="col-md lnch-btn hoverable p-2"
             >
               Launch Weather App
