--- a/about.html
+++ b/about.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="About me, Fereshte Ghazi, front-end developer"
+    />
     <title>About me - Fereshte Ghazi</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -69,13 +73,16 @@
         <div class="col-sm">
           <h1>About me</h1>
           <h2 class="d-xs-block d-md-none">
-            <a href="index.html" class="h4 text-center">Back to Homepage</a>
+            <a href="index.html" title="Homepage" class="h4 text-center"
+              >Back to Homepage</a
+            >
           </h2>
         </div>
         <a
           href="index.html"
+          title="Homepage"
           class="col-md-3 sml-col float-end hoverable d-none d-md-block mt-5"
-          >HomePage</a
+          >Homepage</a
         >
       </div>
     </div>
@@ -110,7 +117,7 @@
           <div class="row mb-5 mt-4">
             <h2 class="col-4 font-weight-bold h1">📮 Contact me:</h2>
             <div class="col"></div>
-            <a href="mailto:mail@gmail.com" class="col-6">
+            <a href="mailto:mail@gmail.com" title="Email" class="col-6">
               <h3 class="font-weight-bold hoverable" id="about_me">
                 <i
                   class="fa-solid fa-envelope fa-xs"
